Fix overflow issue on mobile devices (zoom)

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     position: relative;
 }
 
